# icm42670-examples

./: .gitignore
esp32c3/: Cargo.toml
esp32c3/.cargo/: config.toml
esp32c3/examples/: normalized_data.rs
