[package]
name    = "esp32c3_normalized_data"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
esp-backtrace = { version = "0.10.0", features = ["esp32c3", "exception-handler", "panic-handler", "print-jtag-serial"] }
esp32c3-hal   = "0.15.0"
icm42670      = "0.1.1"
riscv-rt      = { version = "0.12.2", optional = true }
critical-section = "1.1.2"
