[package]
name    = "esp32c3_normalized_data"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.22.0", features = [
    "esp32c3",
] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
critical-section = "1.2.0"
icm42670      = "0.2.0"
embedded-hal = "1.0.0"
